[gd_scene load_steps=5 format=3 uid="uid://c5ntfqwe5yp37"]

[ext_resource type="Script" uid="uid://csrky5nl233oh" path="res://Screens/GameScreen/ProceduralGeneration/procedural_generation_logic.gd" id="1_hy14w"]
[ext_resource type="Script" uid="uid://b4gj0kq6kq2mc" path="res://Screens/GameScreen/ProceduralGeneration/item_pool_handler.gd" id="2_8f28d"]
[ext_resource type="Script" uid="uid://5e5xfarrtrrg" path="res://Screens/GameScreen/ProceduralGeneration/enemy_pool_handler.gd" id="3_h3vjr"]
[ext_resource type="Script" uid="uid://bls30wor1wti8" path="res://Screens/GameScreen/ProceduralGeneration/drop_handler.gd" id="4_yfklh"]

[node name="ProceduralGenerationLogic" type="Node"]
script = ExtResource("1_hy14w")

[node name="ItemPoolHandler" type="Node" parent="."]
script = ExtResource("2_8f28d")

[node name="EnemyPoolHandler" type="Node" parent="."]
script = ExtResource("3_h3vjr")

[node name="DropHandler" type="Node" parent="."]
script = ExtResource("4_yfklh")
